--- a/_posts/2022-3-13-screeps.md
+++ b/_posts/2022-3-13-screeps.md
@@ -1,6 +1,6 @@
 ---
 title: Screeps
-tags: screeps game
+tags: screeps
 ---
 
 ## Screeps
@@ -15,3 +15,13 @@ tags: screeps game
 `RoomNetwork` 是以 `room` 为基本单位的对象，主要完成房间内的基本工作。
 
 ### Role
+
+`Role` 是对 `Creep` 的扩展，也是处理房间事务的基本单位。
+
+#### RoleCarry
+
+`RoleCarry` 主要携带 `CARRY` 和 `MOVE`，负责房间内物质的周转，比如将 `energy` 从 `Source` 处送往 `Storage`。
+
+#### RoleWork
+
+`RoleWork` 主要携带 `WORK`，负责采集能量，采集矿物，升级等等。
