--- a/_posts/2022-4-1-C++ 多态.md
+++ b/_posts/2022-4-1-C++ 多态.md
@@ -1,9 +1,11 @@
 ---
 title: C++ 多态
-tags: c++ 多态
+tags: C++
 ---
 
 记录一下我对于 c++ 多态的理解。
+多态一般指的是运行多态，通过类继承机制和虚函数机制生效与运行期。
+可以优雅的处理异质对象集合，只要共同的基类定义了虚函数的接口。
 
 ## 多态的简单实现
 
@@ -59,3 +61,4 @@ int main() {
 
 - <https://pabloariasal.github.io/2017/06/10/understanding-virtual-tables/>
 - <https://blog.csdn.net/haoel/article/details/1948051/>
+- <https://baike.baidu.com/item/%E5%A4%9A%E6%80%81/2282489?fr=aladdin>
